K8S/produccion/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: wardkitten
  labels: { app: worker, namespace: wardkitten }
spec:
  revisionHistoryLimit: 0
  # Se pueden escalar réplicas: el leader election (lease en Mongo) garantiza que solo una evalúa.
  replicas: 1
  selector:
    matchLabels: { app: worker }
  template:
    metadata:
      name: worker
      namespace: wardkitten
      labels: { app: worker, namespace: wardkitten }
    spec:
      containers:
        - name: worker
          image: ghcr.io/nimitaco/wardkitten-worker:21
          imagePullPolicy: Always
      restartPolicy: Always
      imagePullSecrets:
        - name: nimitaco.ghcr.io
